Fixed spacing and sizing issues for smaller devices.

--- a/src/style.css
+++ b/src/style.css
@@ -41,8 +41,8 @@ p {
     text-decoration: none;
 }
 
-.row {
-    padding-top: 80px !important;
+div.row {
+    padding: 80px 35px ;
 }
 
 .bg-bgprim {
@@ -53,9 +53,49 @@ p {
     background: var(--secondary-color);
 }
 
+div.col-sm.image {
+    padding: 48px 24px;
+}
+
+@media (max-width: 600px){
+    .container-lg {
+        padding: 10px !important;
+        padding-top: 40px !important;
+    }
+    div.row {
+        padding: 20px 10px !important;
+        
+    }
+    div.col-sm {
+       padding: 10px!important; 
+       margin: 10px 5px !important;
+    }
+    h1 {
+        font-size: 48px !important;
+    }
+
+    h2 {
+        font-size: 24px !important;
+    }
+
+    h3 {
+        font-size: 12px !important;
+        opacity: 0.7;
+    }
+
+    p {
+        border-radius: 4px;
+        font-size: 15px;
+        line-height: 1.5;
+        text-align: left;
+        margin: 10px 5px 20px;
+    }
+}
+
+
 .container-lg {
-    padding: 20px !important;
-    padding-top: 90px !important;
+    padding: 20px;
+    padding-top: 90px;
 }
 
 .navigation-links {
